# memoravel

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  memoravel.py  pyproject.toml  setup.py
examples/: basic_usage.py
memoravel/: __init__.py  core.py  memoravel.py
memoravel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/: conf.py  index.rst  memoravel.rst  requirements.txt
tests/: test_memoravel.py
