[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoravel"
version = "1.0.0"
description = "A library to manage message history, for implementing memory in Language Models."
authors = [{name = "Pena", email = "penadoxo@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["LLM", "AI", "memory", "message", "history"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "tiktoken>=0.1",
    "jsonschema>=4.0"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/peninha/memoravel"

[tool.setuptools.packages.find]
where = ["."]